Options disappearing bug appears to have been due to a variable positioning on an invisible textbox which was the input proxy for carota.  Absolutely positioning out of bounds has stopped the browser trying to scroll to it, thus occluding the top line

--- a/src/main/assets/styles/core/mod-main-menu.less
+++ b/src/main/assets/styles/core/mod-main-menu.less
@@ -12,7 +12,7 @@
     overflow:auto;
 }
 .backstage-menu.active {
-    top:2.2em;
+    top:3em;
 }
 .main-menu {
     position:absolute;
